--- a/app/globals.css
+++ b/app/globals.css
@@ -28,7 +28,6 @@ body {
   font-family: Arial, Helvetica, sans-serif;
 }
 
-
 /* hero section */
 .hero-container {
   position: relative;
@@ -47,7 +46,12 @@ body {
   left: 0;
   width: 65%;
   height: 100%;
-  background: radial-gradient(circle at left, rgba(255, 255, 255, 0.7) 30%, rgba(255, 255, 255, 0.3) 70%, transparent);
+  background: radial-gradient(
+    circle at left,
+    rgba(255, 255, 255, 0.7) 30%,
+    rgba(255, 255, 255, 0.3) 70%,
+    transparent
+  );
   z-index: 2;
 }
 
